Change css and disable forget pass

--- a/Flask_Projects/templates/signin.html
+++ b/Flask_Projects/templates/signin.html
@@ -109,7 +109,7 @@
                 </div>
                 <div>
                     <!-- Forgot password -->
-                    <a id="forget" href="{{ url_for('users.reset_request') }}">Forgot password?</a>
+                    <a id="forget" href="{{ url_for('users.reset_request') }}"><abbr title="Because of google security this feature currently not working!! Sorry">Forget Password?</abbr></a>
                 </div>
             </div>
             <!-- Sign in button -->
