--- a/Flask_Projects/templates/blog.html
+++ b/Flask_Projects/templates/blog.html
@@ -18,6 +18,10 @@
       .card-css-align{
         width: 60%; 
         border: 0px;
+        
+      }
+      .card-css-align:hover{
+        box-shadow: 20px 20px 30px #00a1ab;
       }
       p{
         white-space: pre-wrap;
