Change css and disable forget pass and enable this for mobile devices also

--- a/Flask_Projects/templates/signin.html
+++ b/Flask_Projects/templates/signin.html
@@ -30,6 +30,36 @@
                 color: #07031a;
 
         }
+        
+        abbr[title] {
+  position: relative;
+  
+  /* ensure consistent styling across browsers */
+  text-decoration: underline dotted; 
+}
+
+abbr[title]:hover::after,
+abbr[title]:focus::after {
+  content: attr(title);
+  
+  /* position tooltip like the native one */
+  position: absolute;
+  left: 0;
+  bottom: -30px;
+  width: auto;
+  white-space: nowrap;
+  
+  /* style tooltip */
+  background-color: #1e1e1e;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.4);
+  font-size: 14px;
+  padding: 3px 5px;
+}
+
+
+
          .small-devices  {
                 color: #111d5e;
                 font-weight: bold;
@@ -109,7 +139,7 @@
                 </div>
                 <div>
                     <!-- Forgot password -->
-                    <a id="forget" href="{{ url_for('users.reset_request') }}"><abbr title="Because of google security this feature currently not working!! Sorry">Forget Password?</abbr></a>
+                    <a id="forget" href="{{ url_for('users.reset_request') }}"><abbr title="Because of google security this feature currently not working!! Sorry"  tabindex="0">Forget Password?</abbr></a>
                 </div>
             </div>
             <!-- Sign in button -->
